# memos-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.embedded  README.md  VERSIONING_COMPLETE.md  build.ps1  build.rs  build.sh  config.toml
.github/workflows/: release.yml
docs/: API.md  APP_LITE_FULL_VERSION.md  VERSIONING.md
docs/opencode_think/: FIX_IMPORT_TOMBOY_API.md  PLAN.md  PROGRESS.md  UI_UX_CHANGES_USER_LOGIN.md  USER_SIGNUP_CONTINUE_SESSION.md
examples/: benchmark_embeddings.rs  test_openai_provider.rs  test_qdrant_integration.rs  test_user_isolation.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatInterface.tsx  Footer.tsx  ForgotPassword.tsx  Header.tsx  ImportProgressModal.tsx  LLMSettingsModal.tsx  Login.tsx  MainLayout.tsx  MarkdownPreview.tsx  NoteCard.tsx  NoteEditor.tsx  NoteList.tsx  NotebookBrowser.tsx  NotebookSidebar.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  SearchResults.tsx  SearchSidebarContent.tsx  SettingsForm.tsx  UserMenu.tsx  VectorDBStatusModal.tsx  index.ts
frontend/src/hooks/: useAuthService.ts  useChat.ts  useChatStore.ts  useData.ts  useNoteStore.ts
frontend/src/lib/: api.ts  chatApi.ts  version.ts
scripts/: bump.sh  generate_random_notes.py  import_wikipedia.py
src/: config.rs  db_lite.rs  frontend.rs  lib.rs  main.rs  main_lite.rs  markdown.rs  models.rs  server.rs  state.rs
src/api/: embeddings.rs  llm.rs  mod.rs  routes.rs
src/db/: mod.rs
src/db/migrations/sqlite/: 001_init.sql
src/embeddings/: downloader.rs  matrix_ops.rs  mod.rs  tokenizer.rs
src/import_export/: mod.rs
src/import_export/gnote/: mod.rs
src/import_export/tomboy/: actions.rs  exporter.rs  importer.rs  mod.rs  parser.rs
src/import_export/tomboy_ng/: mod.rs
src/models/: auth.rs  auth_dto.rs  note.rs
src/repositories/: auth_repository.rs  mod.rs  note_repository.rs
src/services/: auth_service.rs
src/test_data/: mod.rs  random_notes.rs  vector_store_init.rs  wikipedia_importer.rs
src/utils/: auth_utils.rs  mod.rs
src/vector/: mod.rs  store.rs
test/sample/: test_note.note  test_single.note
tests/: Cargo.toml  LICENSE  README.md  build.rs  build.sh  config.toml  test.rs  test_api.sh  test_filter.rs  test_qdrant_api.sh  test_qdrant_hybrid_search.py  test_query.json  test_reshape.rs
tests/embedding/: test_embed.rs
tests/examples/: seed_test_data.rs
tests/frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/frontend/src/: App.tsx  index.css
tests/frontend/src/components/: ChatMessage.tsx  ChatSidebar.tsx  ForgotPassword.tsx  Header.tsx  ImportProgressModal.tsx  Login.tsx  MarkdownPreview.tsx  NoteEditor.tsx  NoteList.tsx  NotebookRearrangeModal.tsx  NotesSidebar.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  SearchResults.tsx  UserMenu.tsx
tests/frontend/src/lib/: api.ts
tests/integration/: bert_integration_test.rs  chat_mode_test.rs  mod.rs  performance_test.rs  search_rag_test.rs  tomboy_import_test.rs  user_isolation_test.rs
tests/sample/: gnote.note  my-tomboy-2.note  my-tomboy.note  test_notes.xml
tests/scripts/: build.sh  bump.sh  setup-embeddings.sh  start-qdrant.sh  test-embedding.sh
tests/src/: config.rs  frontend.rs  lib.rs  main.rs  markdown.rs  models.rs  server.rs  server_lite.rs  state.rs  state_lite.rs  version.rs
tests/src/api/: chat.rs  mod.rs  routes.rs
tests/src/api_lite/: mod.rs  routes.rs
tests/src/db/: mod.rs
tests/src/embeddings/: bert.rs  cache.rs  model.rs
tests/src/import_export/: mod.rs
tests/src/llm/: mod.rs  providers.rs
tests/src/models/: auth.rs  auth_dto.rs  note.rs
tests/src/repositories/: auth_repository.rs  mod.rs  note_repository.rs  notebook_repository.rs
tests/src/services/: auth_service.rs
tests/src/utils/: markdown.rs
tests/src/vector/: bm25.rs  embeddings.rs
tests/unit/: bert_test.rs  mod.rs  ndarray_bert_test.rs  tokenizer_test.rs
(+14 files in other folders)
