[package]
name = "memos-rs"
version = "0.1.5"
edition = "2021"

[features]
default = []
embed-frontend = ["dep:rust-embed"]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
comrak = "0.23"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
regex = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
tempfile = "3.10"
ring = "0.17"
hex = "0.4"
bcrypt = "0.15"
jsonwebtoken = "9.0"
rand = "0.8"

[dependencies.rust-embed]
version = "8.0"
optional = true

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
glob = "0.3"

[package.metadata]
version-source = "git"

[[bin]]
name = "memos-rs"
path = "src/main.rs"
