[package]
name = "memos-rs"
version = "1.0.0"
edition = "2021"

[features]
default = ["optimize"]
embed-frontend = ["dep:rust-embed"]
optimize = ["dep:ndarray", "dep:num-traits", "dep:ndarray-linalg", "embeddings", "vector-db", "llm"]
lite = []

# Full features (default with optimizations)
full = ["embeddings", "vector-db", "llm"]

# Component features
embeddings = ["dep:tokenizers", "dep:safetensors", "dep:ndarray", "dep:ndarray-linalg", "dep:num-traits"]
vector-db = ["dep:qdrant-client"]
llm = ["dep:reqwest"]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
comrak = "0.23"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
async-recursion = "1.0"
regex = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
tempfile = "3.10"
ring = "0.17"
hex = "0.4"
bcrypt = "0.15"
jsonwebtoken = "9.0"
rand = "0.8"



# Tokenizers (Rust-native, no AVX required)
tokenizers = { version = "0.15", features = ["onig"], optional = true }

# Vector database (Qdrant client)
qdrant-client = { version = "1.7", optional = true }

# For HTTP requests (model downloading)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

# For caching
once_cell = "1.19"

# Hashing
sha2 = "0.10"

# For reading safetensors format
safetensors = { version = "0.4", optional = true }

# Test data generation (DAY 14)
urlencoding = "2.1"

# Optimized linear algebra (DAY 5)
ndarray = { version = "0.15", optional = true }
ndarray-linalg = { version = "0.18", optional = true }
num-traits = { version = "0.2", optional = true }
# Criterion benchmarking (optional for performance testing)
criterion = { version = "0.5", features = ["async"] }

[dependencies.rust-embed]
version = "8.0"
optional = true

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
glob = "0.3"

[package.metadata]
version-source = "git"

[[bin]]
name = "memos-rs"
path = "src/main.rs"

[[bin]]
name = "memos-rs-lite"
path = "src/main_lite.rs"
required-features = ["lite"]

[[example]]
name = "test-openai-provider"
path = "examples/test_openai_provider.rs"
